--- a/Asset Insight System/a.i.s/frontend/src/css/settings.css
+++ b/Asset Insight System/a.i.s/frontend/src/css/settings.css
@@ -1,4 +1,4 @@
-.main {
+.mainSettings {
   width: calc(100% - 6%);
   height: 100%;
   display: flex;
@@ -7,7 +7,7 @@
   flex-direction: column;
 }
 
-.main .first-row {
+.mainSettings .first-row {
   width: 100%;
   height: 10%;
   display: flex;
@@ -15,12 +15,12 @@
   justify-content: space-between;
 }
 
-.main .first-row .date span {
+.mainSettings .first-row .date span {
   color: #0007;
   font-weight: 600;
 }
 
-.main .second-row {
+.mainSettings .second-row {
   margin-top: 10px;
   height: calc(100% - 10%);
   width: 100%;
@@ -32,12 +32,12 @@
   position: relative;
 }
 
-.main .second-row section {
+.mainSettings .second-row section {
   width: 100%;
   height: auto;
 }
 
-.main .second-row .userinfo {
+.mainSettings .second-row .userinfo {
   display: flex;
   align-items: center;
   padding-top: 10px;
@@ -46,14 +46,14 @@
   position: relative;
 }
 
-.main .second-row .pp {
+.mainSettings .second-row .pp {
   display: flex;
   align-items: center;
   justify-content: center;
   position: relative;
 }
 
-.main .second-row .pp span {
+.mainSettings .second-row .pp span {
   font-weight: 600;
   color: var(--blue);
   cursor: pointer;
@@ -62,11 +62,11 @@
   visibility: hidden;
 }
 
-.main .second-row .pp span.active {
+.mainSettings .second-row .pp span.active {
   visibility: visible;
 }
 
-.main .second-row img {
+.mainSettings .second-row img {
   width: 120px;
   height: 120px;
   border-radius: 50%;
@@ -76,13 +76,13 @@
   cursor: pointer;
 }
 
-.main .second-row .userinfo h1 {
+.mainSettings .second-row .userinfo h1 {
   font-size: 32px;
   line-height: 32px;
   font-weight: 700;
 }
 
-.main .second-row .userinfo p {
+.mainSettings .second-row .userinfo p {
   font-size: 16px;
   line-height: 32px;
   color: var(--blue);
@@ -94,17 +94,17 @@ hr {
   opacity: 0.3;
 }
 
-.main .second-row .changePassword {
+.mainSettings .second-row .changePassword {
   margin-bottom: 30px;
 }
 
-.main .second-row .changePassword h4 {
+.mainSettings .second-row .changePassword h4 {
   margin-top: 20px;
   margin-bottom: 20px;
   margin-left: 12px;
 }
 
-.main .second-row .changePassword p {
+.mainSettings .second-row .changePassword p {
   padding-left: 20px;
   font-size: 14px;
   margin-bottom: 30px;
@@ -112,28 +112,28 @@ hr {
   opacity: 0.5;
 }
 
-.main .second-row .changePassword .fields {
+.mainSettings .second-row .changePassword .fields {
   width: 100%;
   display: flex;
   flex-direction: column;
   padding-left: 20px;
 }
 
-.main .second-row .changePassword .fields .field {
+.mainSettings .second-row .changePassword .fields .field {
   width: auto;
   display: flex;
   flex-direction: column;
   margin-bottom: 10px;
 }
 
-.main .second-row .changePassword .fields .field label {
+.mainSettings .second-row .changePassword .fields .field label {
   font-weight: 600;
   font-size: 14px;
   margin-bottom: 5px;
   color: var(--blue);
 }
 
-.main .second-row .changePassword .fields .field input {
+.mainSettings .second-row .changePassword .fields .field input {
   width: 300px;
   margin-bottom: 10px;
   padding: 10px;
@@ -144,11 +144,11 @@ hr {
   font-weight: 600;
 }
 
-.main .second-row .changePassword .fields .field input:focus {
+.mainSettings .second-row .changePassword .fields .field input:focus {
   outline: 2px solid var(--blue);
 }
 
-.main .second-row .changePassword button {
+.mainSettings .second-row .changePassword button {
   width: 300px;
   color: white;
   font-weight: 600;
@@ -160,11 +160,11 @@ hr {
   cursor: pointer;
 }
 
-.main .second-row .changePassword button:hover {
+.mainSettings .second-row .changePassword button:hover {
   background-color: var(--blue-hover);
 }
 
-.main .second-row .links-container {
+.mainSettings .second-row .links-container {
   width: auto;
   display: flex;
   flex-direction: column;
@@ -172,7 +172,7 @@ hr {
   padding-left: 20px;
 }
 
-.main .second-row .links-container .links {
+.mainSettings .second-row .links-container .links {
   font-weight: 600;
   color: var(--blue);
   font-size: 15px;
@@ -284,15 +284,15 @@ button.logout {
 
 /*Dark mode  */
 
-body.dark .main .first-row {
+body.dark .mainSettings .first-row {
   color: #fff;
 }
 
-body.dark .main .first-row .date span {
+body.dark .mainSettings .first-row .date span {
   color: #fff7;
 }
 
-body.dark .main .second-row {
+body.dark .mainSettings .second-row {
   background-color: var(--black-e);
 }
 
@@ -301,8 +301,8 @@ body.dark input {
   color: #fff;
 }
 
-body.dark .main .second-row .userinfo h1,
-body.dark .main .second-row .changePassword h4,
-body.dark .main .second-row .changePassword p {
+body.dark .mainSettings .second-row .userinfo h1,
+body.dark .mainSettings .second-row .changePassword h4,
+body.dark .mainSettings .second-row .changePassword p {
   color: #fff;
 }
