--- a/Asset Insight System/a.i.s/frontend/src/css/settings.css
+++ b/Asset Insight System/a.i.s/frontend/src/css/settings.css
@@ -34,7 +34,7 @@
 
 .mainSettings .second-row section {
   width: 100%;
-  height: auto;
+  height: 80vh;
 }
 
 .mainSettings .second-row .userinfo {
