--- a/Asset Insight System/a.i.s/src/css/module.css
+++ b/Asset Insight System/a.i.s/src/css/module.css
@@ -153,7 +153,8 @@
   font-weight: 600;
   border-radius: 5px;
   position: relative;
-  bottom: 10px;
+  top: 5px;
+  bottom: 5px;
 }
 
 .module button:hover {
